Pass correct resource type to OnDidLoadResourceFromMemoryCache.

Resource type isn't passed to browser correctly.
More details in https://crbug.com/664135
This is an attempt to fix it.

BUG=664135

Review-Url: https://codereview.chromium.org/2494713002
Cr-Commit-Position: refs/heads/master@{#434629}

Former-commit-id: 6a5b9a93ca59066746f7e46a6f4a8e2594d3bb07